--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,7 +20,7 @@
                             <div class="text-center">
                                 <img src="images/account.png" alt="Andrew Jones" class="img-fluid rounded-circle" width="132" height="132">
                             </div>
-                            <form method="post">
+                            <form method="post" action="/login">
                                 <div class="form-group">
                                     <label>Username</label>
                                     <input class="form-control form-control-lg" type="email" name="username" placeholder="Enter your email">
