--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ml-auto ">
                     <li><a href="/chatting" class="nav-item nav-link"><i class="fa fa-home"></i> Start Chatting</a></li>
                     <li><a href="/profile" class="nav-item nav-link active"><i class="fa fa-user"></i> My Profile</a></li>
-                    <li><a href="/users" class="nav-item nav-link"><i class="fa fa-users"></i> Other Users</a></li>
+                    <li><a href="/users" class="nav-item nav-link"><i class="fa fa-users"></i> Users</a></li>
                     <li><a href="/chatroom" class="nav-item nav-link"><i class="fa fa-comment"></i> Chat Rooms</a></li>
                     <li><a href="/contact" class="nav-item nav-link"><i class="fa fa-address-book"></i> Contact</a></li>
                 </ul>
@@ -40,6 +40,16 @@
 
 </header>
 <main>
+    <div class="container">
+        {{#if info }}
+        <div class="alert alert-info alert-dismissable px-5 mt-5">
+            <a class="panel-close close" data-dismiss="alert">×</a>
+            <i class="fa fa-info"></i>
+            {{message}}
+        </div>
+        {{/if}}
+    </div>
+
 {{{body}}}
 </main>
 <!-- JavaScript Bundle with Popper -->
